--- a/models/auto_hid.yaml
+++ b/models/auto_hid.yaml
@@ -12,7 +12,7 @@
 #        tied_weights: True
     },
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
-        learning_rate : 1e-1,
+        learning_rate : 0.2,
         batch_size : 100,
         monitoring_batches : 10,
         monitoring_dataset : *data,
